# fake-avx512

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: abs.rs
