[package]
name = "fake-avx512"
version = "0.0.0"
edition = "2018"
authors = ["luojia65 <me@luojia.cc>"]
description = "Test oriented software simulated SIMD AVX-512 functions"
repository = "https://github.com/luojia65/fake-avx512"
documentation = "https://docs.rs/fake-avx512/"
keywords = ["avx512", "simd"]
readme = "README.md"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
